--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,13 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.avatar__photo,
+img.avatar {
+  border-radius: 2 !important; /* 去掉圆角 */
+  width: auto !important; /* 不强制固定宽度 */
+  height: auto !important; /* 不强制固定高度 */
+  max-width: 60px; /* 限制最大宽度，等比缩放 */
+  max-height: 60px; /* 限制最大高度，等比缩放 */
+  object-fit: contain !important; /* 保持图片完整，不裁切 */
+}
